--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: xujaan
   instagram: xujaan
-  linkedin:
+  linkedin: xujaan
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: xxxujaan
@@ -36,11 +36,12 @@ footer-links:
 disqus: xujaan
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: G-QLK53VCQZ4
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
 url: https://xujaan.github.io
+paginate: 5
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
