--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: xujaan
 
 # Short bio or description (displayed in the header)
-description: Web Developer and IoT Engineer
+description: Web and Embedded Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/xujaan/xujaan.github.io/master/images/photo-profile-small.png
